# funpay-chatgpt-bot

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260713_0001_initial_schema.py  20260713_0002_add_admin_chats.py  20260713_0003_normalize_encrypted_values.py  20260713_0004_admin_session_version.py  20260713_0005_system_subscription_catalog.py  20260713_0006_revalidate_legacy_account_plans.py  20260713_0007_exact_openai_usage_windows.py  20260713_0008_email_oauth_credentials.py  20260713_0009_rental_credential_delivery.py  20260713_0010_safe_validation_interval.py  20260713_0011_operator_override_and_delivery_retry.py  20260713_0012_editable_lot_templates.py  20260713_0013_editable_catalog_availability.py  20260713_0014_catalog_sort_invariants.py  20260713_0015_duration_minutes_agentic_scope.py  20260713_0016_verified_funpay_sales.py  20260714_0017_funpay_sale_backfill_cursor.py  20260714_0018_bot_managed_sales_only.py  (+4 more)
backend/app/: app_lifecycle.py  check_job_queue.py  config.py  main.py  refresh_worker.py  scheduler.py  telegram_notifier.py
backend/app/api/: auth.py  (+4 more)
backend/tests/: conftest.py  test_account_device_auth.py  test_account_limits_model.py  test_account_limits_service.py  test_account_model.py  test_account_pool.py  test_account_validation.py  test_api_accounts.py  test_api_auth.py  test_api_catalog.py  test_api_chats.py  test_api_lots.py  test_api_metrics.py  test_api_orders.py  test_api_prices.py  test_api_rentals.py  test_api_schemas.py  test_api_settings.py  test_api_templates.py  test_app_lifecycle.py  test_bootstrap.py  test_bump.py  test_capacity_safety.py  test_catalog_models.py  test_catalog_sellability_migration.py  test_check_job_model.py  test_check_job_queue.py  test_command_handlers.py  test_command_parser.py  test_command_router.py  test_config.py  test_crypto.py  test_delivery_policy.py  test_device_auth.py  test_durations.py  test_email_oauth.py  test_email_provider.py  test_enable_2fa.py  test_encrypted_type.py  test_funpay_exceptions.py  (+41 more)
(+172 files in other folders)
