[project]
name = "funpay-chatgpt-bot"
version = "0.1.0"
description = "Bot for renting ChatGPT accounts via FunPay"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "pyotp>=2.9",
    "cryptography>=42.0",
    "httpx>=0.27",
    "PyJWT>=2.13.0,<3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<4.2",
    "playwright==1.61.0",
    "python-telegram-bot>=21.0",
    "funpaybotengine==0.7.0",
    "funpayparsers==0.10.0",
    "aioimaplib==2.0.1",
    "pyzbar>=0.1.9",
    "Pillow>=10.0",
    "qrcode[pil]>=7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "aiosqlite>=0.19",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
